Mobile styling and adding preview card

--- a/index.html
+++ b/index.html
@@ -1,31 +1,30 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    
-    <title>Dane Gellerup - Full Stack Software Engineer - Bioinformatics</title>
-    <meta name="description" content="Senior software engineer building high-performance bioinformatics and cloud systems" />
 
-    <!-- Open Graph (Facebook/LinkedIn)-->
-     <meta property="og:type" content="website" />
-     <meta property="og:title" content="Dane Gellerup - Full Stack Bioinformatics Software Engineer" />
-     <meta property="og:description" content="Senior software engineer building high-performance bioinformatics and cloud systems" />
-     <meta property="og:url" content="https://danegellerup.com/" />
-     <meta property="og:image" content="https://danegellerup.com/og-image.png" />
+    <!-- Basic SEO -->
+    <title>Dane Gellerup — Senior Bioinformatics Engineer</title>
+    <meta name="description" content="Senior software engineer specializing in bioinformatics, Rust/Python, and AWS. Builder of high-performance genomic pipelines and cloud platforms." />
 
-    <!-- Twitter/X-->
+    <!-- Open Graph -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.danegellerup.com/" />
+    <meta property="og:title" content="Dane Gellerup — Senior Bioinformatics Engineer" />
+    <meta property="og:description" content="Senior software engineer specializing in bioinformatics, Rust/Python, and AWS." />
+    <meta property="og:image" content="https://www.danegellerup.com/preview.png" />
+
+    <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Dane Gellerup — Software Engineer" />
-    <meta name="twitter:description" content="Senior software engineer building high-performance bioinformatics and cloud systems." />
-    <meta name="twitter:image" content="https://yourdomain.com/og-image.png" />
-
-    <!-- Favicon & theme -->
-    <link rel="icon" href="/favicon.ico" />
-    <meta name="theme-color" content="#0f172a" />
+    <meta name="twitter:title" content="Dane Gellerup — Senior Bioinformatics Engineer" />
+    <meta name="twitter:description" content="Senior software engineer specializing in bioinformatics, Rust/Python, and AWS." />
+    <meta name="twitter:image" content="https://www.danegellerup.com/preview.png" />
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
+
